2. If combining 'Apps' and 'Radios', hide 'Music Walk With Me' as this
   duplicates Material functionality.
3. When listing works, show composer as a header.
4. When listing 'Works' main category ask if want to show 'All Works',
   'Composers', or 'Genres'
5. Request smaller image for backgrounds, and reduce blur.
6. Add Work, Performance, and Album to details in MAI track view.

4.6.3
-----
1. Add tag to 'viewport' meta-data to restore old Chrome behaviour when
   showing keyboard on Android.
2. No album-sort for Works-Album list.
3. Fix 'All tracks' for Works-Album list.
4. Remove 'Append random album/release to queue' from Works-album actions.

4.6.2
-----
1. When adding random album/release to queue ensure title is asked from LMS.
2. In MAI track view only show 'Band/orchestra' if different to 'Album
   artist', and only show 'Album artist' if different from track artist.
3. Add 'browseWork' to 'document.lmsMaterialSkin'

4.6.1
-----
 1. Update some translations.
 2. If LMS < 8.5.2 and using 'All' tracks library for 'Random Mix' then use '0'
    as library_id.
 3. Fix incorrect 'Works' header showing for 'Advanced search' results.
 4. Get genre list for 'Random Mix' from 'randomplaygenrelist' command.
 5. Use term 'Track' instead of 'Song'.
 6. Use correct icon for 'Releases' under 'Genres'.
 7. Show release total time in release style queue for releases with more than 1
    track.
 8. Don't '0' pad times.
 9. Pass default library id when removing albums/releases from queue.
10. Alter how toolbar background image is blurred.
11. Fix links from now-playing.
12. Don't use 'library_id' from SlimBrowse responses.

4.6.0
-----
 1. Add option to auto-switch to reduced now-playing view, to help with OLED
    screen burn-in.
 2. For LMS running on piCorePlayer add 'Configuration' item to top-right menu
    of 'Server settings'
 3. If width >= 1000px then allow image in now-playing landscape to take 60% of
    width.
 4. Always blur background of detailed sub-toolbar.