@@ -449,7 +449,7 @@ input[type=radio]:checked:before {
 }
 
 #saveSettings {
- color: #edece7 !important;
+ color: var(--inverted-text-color) !important;
  background-color: var(--primary-color) !important;
  margin-top:8px;
 }
