@@ -1,0 +1,25 @@
+/**
+ * LMS-Material
+ *
+ * Copyright (c) 2018-2024 Craig Drummond <craig.p.drummond@gmail.com>
+ * MIT license.
+ */
+
+:root {
+ --highlight-rgb:88,158,129;
+ --primary-color:#589e81;
+ --accent-color:#6cac92;
+}
+
+.theme--dark {
+ --highlight-rgb:226,253,196;
+ --primary-color:#e2fdc4;
+ --accent-color:#e2fdc4;
+ --active-color:#e2fdc4!important;
+ --toolbar-volume-color:#e2fdc4!important;
+ --inverted-text-color:#333;
+}
+
+.theme--dark .m3-switch--active:after {
+ background-color:#777!important;
+}
