@@ -8,6 +8,7 @@ x.x.x
    'Composers', or 'Genres'
 5. Request smaller image for backgrounds, and reduce blur.
 6. Add Work, Performance, and Album to details in MAI track view.
+7. Add 'Lyrion' colour - different between Light and Dark themes.
 
 4.6.3
 -----
